--- a/.htaccess
+++ b/.htaccess
@@ -2,6 +2,7 @@ RewriteEngine on
 
 RewriteRule ^home/?$ index.php [L]
 RewriteRule ^book/?$ book.php [L]
+RewriteRule ^search_results/?$ search_results.php [L]
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
